--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "jsonwebtoken": "^9.0.0",
     "mongo": "^0.1.0",
     "mongodb": "4.1",
-    "mongoose": "^7.0.3"
+    "mongoose": "^7.0.3",
+    "node": "^18.14.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.22"
